--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port $PORT --host $HOST",
     "build": "tsc && vite build",
     "preview": "vite preview --port $PORT"
   },
